@@ -12,6 +12,7 @@ Version 0.5.0 - In development
 * Updated all plugins with an authors array to show multiple authors
 * Added plugin-development/convert-plugin-authors.rb script
 * Changed the behaviour of --grep to only output results that match the grep plugin
+* Changed the behaviour of --grep so regexp or text can be matched
 * Reached over 1800 plugins
 
 * 48 New plugins
